# cortex_router

./: Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml
deployment/: config.json  init.json
router/: Cargo.toml  config.json  init.json
router/src/: main.rs
touch_port/: Cargo.toml
touch_port/src/: lib.rs  port.rs
