[package]
name = "router"
version = "0.1.0"
authors = ["Linus Basig <linus@basig.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
cerk = "0.2"
cerk_runtime_threading = "0.2"
cerk_router_rule_based = "0.2"
cerk_loader_file = "0.2"
cerk_config_loader_file = "0.2"
cerk_port_mqtt_mosquitto = "^0.2.8"
touch_port = { path = "../touch_port"}
serde = "1.0"
serde_json = "1.0"
