[package]
name = "touch_port"
version = "0.1.0"
authors = ["Linus Basig <linus@basig.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
cerk = "0.2"
cloudevents-sdk = "0.3"
gpio = "0.4"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"